Add status, some js function
- status: done, not-yet.
- js: Confirm deleted, change status

--- a/config/database.yml
+++ b/config/database.yml
@@ -5,3 +5,6 @@
   development:
     adapter: sqlite3
     database: db/todo_test.sqlite3
+  production:
+    adapter: sqlite3
+    database: db/todo_test.sqlite3
